--- a/css/main.css
+++ b/css/main.css
@@ -327,7 +327,9 @@ body {
 
 .project__img {
   border-radius: 10px;
+  height: 100px;
 }
+
 
 .project__title {
   padding: 15px 20px 25px;
@@ -335,6 +337,13 @@ body {
   font-size: 24px;
   line-height: 1.3;
   color: var(--project-card-text);
+}
+
+.project__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 /* Project details */
