--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ body {
 .title-2 {
   margin-bottom: 20px;
 
-  font-size: 40px;
+  font-size: 48px;
   font-weight: 700;
   line-height: 1.3;
 }
@@ -582,3 +582,6 @@ body {
   max-width: 100%;
 }
 
+.index_text {
+  font-size: larger;
+}
