--- a/css/main.css
+++ b/css/main.css
@@ -596,14 +596,12 @@ body {
   width: 150px;
   height: auto;
   border-radius: 50%;
-  transition: transform 0.3s ease, z-index 0.3s;
+  transition: transform 0.3s ease;
   cursor: pointer;
-  z-index: 1;
 }
 
-.profile-pic:active {
+.profile-pic.enlarged {
   transform: scale(2.5);
   z-index: 10;
   position: relative;
-  cursor: pointer;
 }
